--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container">
-        <div class="inner-container">
+        <!-- <div class="inner-container"> -->
             <div class="header">
                 <p><b> CASE STUDIES</b></p>
                 <h1>Our work describes why we are <br> the best in the business</h1>
@@ -50,7 +50,7 @@
             <div class="footer">
                 <p>See all work →</p>
             </div>
-        </div>
+        <!-- </div> -->
 
 
     </div>
