updated folder structure

--- a/02 Work Layout/index.html
+++ b/02 Work Layout/index.html
@@ -4,72 +4,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard Component</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-        crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="./style.css">
+    <title>Document</title>
 </head>
 
 <body>
     <div class="container">
-        <div class="box">
+        <div class="inner-container">
             <div class="header">
-                <div class="title">
-                    <div class="black heading">Transactions
-                    </div>
-                    <div class="link">See All Transactions <span class="material-symbols-outlined">chevron_right</span>
+                <p><b> CASE STUDIES</b></p>
+                <h1>Our work describes why we are <br> the best in the business</h1>
+            </div>
+
+            <div class="grid">
+                <div class="cards item-1">
+                    <img src="./public/l5-case1.jpg" alt="products">
+                    <div class="card-footer">
+                        <p>Graphic Design</p>
+                        <h1>Aura Branding Design</h1>
                     </div>
                 </div>
-                <p class="sub-heading">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                </p>
+                <div class="cards item-2">
+                    <img src="./public/l5-case3.jpg" alt="products">
+                    <div class="card-footer">
+                        <p>Graphic Design</p>
+                        <h1>AB.S Snack Packaging</h1>
+                    </div>
+                </div>
+                <div class="cards item-3">
+
+                    <img src="./public/l5-case2.jpg" alt="products">
+                    <div class="card-footer">
+                        <p>Web Development</p>
+                        <h1>Gradient Website Development</h1>
+                    </div>
+                </div>
+                <div class="cards item-4">
+                    <img src="./public/l5-case4.jpg" alt="products">
+                    <div class="card-footer">
+                        <p>Content Writing</p>
+                        <h1>Magazine Content writing</h1>
+                    </div>
+                </div>
             </div>
-            <table>
-                <tr>
-                    <td>
-                        <div class="chip-completed">• Completed</div>
-                    </td>
-                    <td class="black">Visa card **** 4831 <br><span class="reset">Card payment</span></td>
-                    <td class="black">$182.94 <br><span class="reset">Jan 17, 2022</span></td>
-                    <td class="reset">Amazon</td>
-                    <td class="more reset" ><span class="material-symbols-outlined">more_horiz</span></td>
-                </tr>
-                <tr>
-                    <td>
-                        <div class="chip-completed">• Completed</div>
-                    </td>
-                    <td class="black">Mastercard **** 6442 <br><span class="reset">Card payment</span></td>
-                    <td class="black">$99.00 <br><span class="reset">Jan 17, 2022</span></td>
-                    <td class="reset">Facebook</td>
-                    <td class="more reset" ><span class="material-symbols-outlined">more_horiz</span></td>
-                </tr>
-                <tr>
-                    <td>
-                        <div class="chip-pending">• Pending</div>
-                    </td>
-                    <td class="black">Account ****882 <br><span class="reset">Bank payment</span></td>
-                    <td class="black">$249.94 <br><span class="reset">Jan 17, 2022</span></td>
-                    <td class="reset">Netflix</td>
-                    <td class="more reset" ><span class="material-symbols-outlined">more_horiz</span></td>
-                </tr>
-                <tr class="last-row">
-                    <td>
-                        <div class="chip-canceled">• Canceled</div>
-                    </td>
-                    <td class="black">Amex card **** 5666 <br><span class="reset">Card payment</span></td>
-                    <td class="black">$199.24 <br><span class="reset">Jan 17, 2022</span></td>
-                    <td class="reset"> Amazon Prime</td>
-                    <td class="more reset" ><span class="material-symbols-outlined">more_horiz</span></td>
-                </tr>
-            </table>
+            <div class="footer">
+                <p>See all work →</p>
+            </div>
         </div>
-    </div>
-    </table>
-    </div>
+
+
     </div>
 
 </body>
