--- a/03 Pricing Details/index.html
+++ b/03 Pricing Details/index.html
@@ -23,7 +23,7 @@
 
             <div class="list-item">
                 <div class="item">
-                    <img src="./public/airpods.png" alt="Apple AirPods Pro">
+                    <img src="./public/airpods.jpg" alt="Apple AirPods Pro">
                     <h3>Apple AirPods Pro<br><br><span class="price">$229</span></h3>
                 </div>
                 <button class="remove-item" aria-label="Remove item">
@@ -33,7 +33,7 @@
 
             <div class="list-item">
                 <div class="item">
-                    <img src="./public/airpods.png" alt="Apple AirPods Pro">
+                    <img src="./public/airpods.jpg" alt="Apple AirPods Pro">
                     <h3>Apple AirPods Pro<br><br><span class="price">$229</span></h3>
                 </div>
                 <button class="remove-item" aria-label="Remove item">
