--- a/04 Profile Card/index.html
+++ b/04 Profile Card/index.html
@@ -15,7 +15,7 @@
 <body>  
 
     <div class="container">
-        <div class="car">
+        <div class="card">
             <img src="./profile-photo.jpg" alt="profile photo">
             <p><span class="name">Jared Bell</span></p>
             <p>Frontend Developer</p>
