Pricing Table Done

--- a/06 Pricing Table/index.html
+++ b/06 Pricing Table/index.html
@@ -35,6 +35,8 @@
 
 
         <div class="cards">
+
+            <!-- Card 1 -->
             <div class="card">
                 <p class="plan-name dark-font">STARTER</p>
                 <p class="pricing-detail black-font lato-bold"><span class="currency">$</span><span
@@ -44,22 +46,70 @@
                     <li><span class="material-symbols-outlined">check</span>Commercial License</li>
                     <li><span class="material-symbols-outlined">check</span>100+ HTML UI Elements</li>
                     <li><span class="material-symbols-outlined">check</span>01 Domain Support</li>
-                    <li><span class="material-symbols-outlined">check</span>6 Month Premium Support</li>
+                    <li class="close"><span class="material-symbols-outlined close">close</span>6 Month Premium Support
+                    </li>
+                    <li class="close"><span class="material-symbols-outlined close">close</span>Lifetime Updates</li>
+                </ul>
+                <div class="button">
+                    <span class="dark-font">Start Free Trial</span>
+                    <span class="material-symbols-outlined dark-font">
+                        arrow_forward
+                    </span>
+                </div>
+                <p class="credit-card-info">No credit card required</p>
+            </div>
+
+            <!-- Card 2 -->
+            <div class="card">
+                <p class="plan-name dark-font">STANDARD</p>
+                <p class="pricing-detail black-font lato-bold"><span class="currency">$</span><span
+                        class="price">49</span>/ <span class="frequency">month</span></p>
+                <p>billed <span class="frequency">month</span>ly</p>
+                <ul>
+                    <li><span class="material-symbols-outlined">check</span>Commercial License</li>
+                    <li><span class="material-symbols-outlined">check</span>100+ HTML UI Elements</li>
+                    <li><span class="material-symbols-outlined">check</span>Unlimited Domain Support</li>
+                    <li><span class="material-symbols-outlined">check</span>6 Month Premium Support
+                    </li>
+                    <li class="close"><span class="material-symbols-outlined close">close</span>Lifetime Updates</li>
+                </ul>
+                <div class="button">
+                    <span class="dark-font">Start Free Trial</span>
+                    <span class="material-symbols-outlined dark-font">
+                        arrow_forward
+                    </span>
+                </div>
+                <p class="credit-card-info">No credit card required</p>
+            </div>
+
+            <!-- Card 3 -->
+            <div class="card">
+                <p class="plan-name dark-font">PREMIUM</p>
+                <p class="pricing-detail black-font lato-bold"><span class="currency">$</span><span
+                        class="price">99</span>/ <span class="frequency">month</span></p>
+                <p>billed <span class="frequency">month</span>ly</p>
+                <ul>
+                    <li><span class="material-symbols-outlined">check</span>Commercial License</li>
+                    <li><span class="material-symbols-outlined">check</span>100+ HTML UI Elements</li>
+                    <li><span class="material-symbols-outlined">check</span>Unlimited Domain Support</li>
+                    <li><span class="material-symbols-outlined">check</span>6 Month Premium Support
+                    </li>
                     <li><span class="material-symbols-outlined">check</span>Lifetime Updates</li>
                 </ul>
-                <button>Start Free Trial -></button>
-                <p>No credit card required</p>
+                <div class="button">
+                    <span class="dark-font">Start Free Trial</span>
+                    <span class="material-symbols-outlined dark-font">
+                        arrow_forward
+                    </span>
+                </div>
+                <p class="credit-card-info">No credit card required</p>
             </div>
 
-            <div class="card">
 
-            </div>
-            <div class="card">
-
-            </div>
         </div>
     </div>
-
+    </div>
+    <script src="./index.js"></script>
 </body>
 
 </html>
